# app-wrtactix

./: .clang-format  .gitignore  CMakeLists.txt  format.sh  generate-docs.sh
data/algorithm/geometry/radialsweep/: plot_radialsweep.gnuplot  radialsweep_plotter.cc
data/algorithm/pathplanner/astar/: astar_plotter.cc  plot_astar.gnuplot
data/algorithm/pathplanner/potentialfield/: plot_potential_fields.gnuplot  plotter.cc  potential_plotter.cc
data/algorithm/pathplanner/rrtconnect/: plot_rrtconnect.gnuplot  rrtconnect_plotter.cc
data/algorithm/pathplanner/univectorfield/: plot_uvf.gnuplot  uvf_plotter.cc
docs/diagrams/src/class/: behavior_tree_classes.puml  control_classes.puml  pathplanner_classes.puml  referee_classes.puml  sslagent_classes.puml  world_classes.puml
src/: main.cc
src/agent/: agent.hh  baseagent.hh  basecommand.cc  basecommand.hh  commandqueue.cc  commandqueue.hh
src/agent/sslagent/: sslaction.hh  sslagent.cc  sslagent.hh  sslbehavior.hh  sslcontroller.cc  sslcontroller.hh  sslplay.cc  sslplay.hh  sslrole.hh
src/agent/sslagent/actions/: actions.hh  chipkick.hh  dribble.hh  goto.cc  goto.hh  gotolookat.cc  gotolookat.hh  idle.cc  idle.hh  kick.cc  kick.hh  lookat.cc  lookat.hh  rotatearound.cc  rotatearound.hh  trap.hh
src/agent/sslagent/behaviors/: barrier.cc  barrier.hh  behaviors.hh  calibrateangular.cc  calibrateangular.hh  calibratelinear.cc  calibratelinear.hh  deflectpass.cc  deflectpass.hh  donothing.cc  donothing.hh  fastshoottogoal.cc  fastshoottogoal.hh  followball.cc  followball.hh  goalkeeper.cc  goalkeeper.hh  pass.cc  pass.hh  preciseshoottogoal.cc  preciseshoottogoal.hh  receivepass.cc  receivepass.hh  shoottogoal.cc  shoottogoal.hh
src/agent/sslagent/compoundbehaviors/: attackersupport.cc  attackersupport.hh  compoundbehaviors.hh  supportattacker.cc  supportattacker.hh
src/agent/sslagent/conditions/: aiming.cc  aiming.hh  ballinteraction.cc  ballinteraction.hh  block.cc  block.hh  keeper.cc  keeper.hh  locations.cc  locations.hh
src/agent/sslagent/plays/: halt.cc  halt.hh  naiveoffense.cc  naiveoffense.hh  plays.hh  supportstrikeroffense.cc  supportstrikeroffense.hh
src/agent/sslagent/roles/: barrier.cc  barrier.hh  barrierleft.cc  barrierleft.hh  barriermiddle.cc  barriermiddle.hh  barrierright.cc  barrierright.hh  goalkeeper.cc  goalkeeper.hh  roles.hh  striker.cc  striker.hh
src/agent/wrappers/: obstaclesbuilder.cc  obstaclesbuilder.hh
src/agent/wrappers/navigation/: navigation.hh
src/algorithm/: algorithm.hh
src/algorithm/behaviortree/: behaviortree.hh  node.cc  node.hh
src/algorithm/behaviortree/base/: basenodes.hh  costnode.cc  costnode.hh  node.cc  node.hh
src/algorithm/behaviortree/base/controlflow/: controlflownode.cc  controlflownode.hh  fallback.cc  fallback.hh  parallel.cc  parallel.hh  sequence.cc  sequence.hh
src/algorithm/behaviortree/base/decorators/: forcefailure.cc  forcefailure.hh  forcesuccess.cc  forcesuccess.hh  simplereturn.cc  simplereturn.hh
src/algorithm/behaviortree/base/execution/: action.cc  action.hh  booleanflipper.cc  booleanflipper.hh  condition.cc  condition.hh  executionnode.cc  executionnode.hh  runlambda.cc  runlambda.hh
src/algorithm/control/: control.hh
src/algorithm/control/accelerationramp/: accelerationramp.cc  accelerationramp.hh
src/algorithm/control/pid/: pid.cc  pid.hh
src/algorithm/genetic/: genetic.hh
src/algorithm/geometry/kdtree/: kdtree.cc  kdtree.hh
src/algorithm/geometry/radialsweep/: radialsweep.cc  radialsweep.hh
src/algorithm/geometry/twod/: twod.cc  twod.hh
src/algorithm/goap/: behavior.hh  goal.hh  goap.cc  goap.hh
src/algorithm/interpolation/: interpolation.cc  interpolation.hh
src/algorithm/pathplanner/: pathplanner.hh
src/algorithm/pathplanner/astar/: astar.cc  astar.hh  astargrid.hh
src/algorithm/pathplanner/pflorinho/: pflorinho.cc  pflorinho.hh  vector.hh
src/algorithm/pathplanner/pflorinho/freeangles/: freeangles.cc  freeangles.hh  obstacle.cc  obstacle.hh  utils.hh
src/algorithm/pathplanner/pointtopoint/: pointtopoint.cc  pointtopoint.hh
src/algorithm/pathplanner/potentialfield/: potentialfield.cc  potentialfield.hh
src/algorithm/pathplanner/rrtconnect/: rrtconnect.cc  rrtconnect.hh
src/algorithm/pathplanner/starpotential/: starpotential.cc  starpotential.hh
src/algorithm/pathplanner/univectorfield/: univectorfield.cc  univectorfield.hh
src/coach/: coach.hh
src/coach/sslcoach/: sslcoach.cc  sslcoach.hh
src/constants/: constants.cc  constants.hh  constants.toml
src/constants/config/: config.cc  config.hh
src/proto/: coach_common.proto  coach_debug.proto  coach_detection.proto  coach_geometry.proto  common.proto  protoc.sh
src/referee/: referee.cc  referee.hh
src/referee/types/: gamestate.cc  gamestate.hh  refereemap.cc  refereemap.hh
src/types/: angle.hh  color.hh  dictionary.hh  obstacle.hh  playerid.hh  side.hh  status.hh  types.hh  vec2.hh
src/utils/logger/: logger.cc  logger.hh
src/utils/testsuite/: testsuite.cc  testsuite.hh
src/world/: world.cc  world.hh  worldinfo.cc  worldinfo.hh
tests/: test_main.cc
tests/algorithm/pathplanner/potentialfield/: plot_potential_fields.gnuplot  test_potentialfield.cc
tests/unit/: test_angle.cc  test_astar.cc  test_goap.cc  test_kdtree.cc  test_potentialfield.cc  test_radialsweep.cc  test_twod.cc
